# aioworkers-sentry

./: .scaraplate.conf  .travis.yml  MANIFEST.in  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  tests.yml  upload.yml
aioworkers_sentry/: __init__.py  client.py  logging.py  sentry.ini  sentry.yaml
tests/: conftest.py  test_client.py  test_handlers.py  test_logging.py  test_methods.py
