[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioworkers-sentry"
dynamic = ["version"]
description = "aioworkers plugin for Sentry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Alexander Bogushov", email = "abogushov@gmail.com" },
    { name = "Alexander Malev", email = "malev@somedev.ru" },
]
keywords = [
    "aioworkers",
    "sentry",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aioworkers>=0.13",
    "sentry-sdk>=1.22",
]
[project.optional-dependencies]
dev-test = [
    "aioworkers==0.21",
    "sentry-sdk==1.22",
    "coverage==7.2.5",
    "pytest==7.0.1",
    "pytest-aioworkers[asyncio]==0.4",
    "pytest-mock==3.6.1",
    "pyyaml==6.0",
]
dev-lint = [
    "isort==5.12.0",
    "mypy==1.2.0",
    "black==23.3.0",
    "ruff==0.0.265",
]

[project.urls]
Homepage = "https://github.com/aioworkers/aioworkers-sentry"
Documentation = "https://github.com/aioworkers/aioworkers-sentry"
Issues = "https://github.com/aioworkers/aioworkers-sentry/issues"
Source = "https://github.com/aioworkers/aioworkers-sentry"

[tool.hatch.version]
path = "aioworkers_sentry/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/aioworkers_sentry",
]

[tool.hatch.envs.default]
features = [
    "dev-test",
]
[tool.hatch.envs.default.scripts]
cov = "coverage run -m pytest && coverage report"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "aioworkers_sentry"]
addopts = ["-s", "--doctest-modules"]

[tool.coverage.run]
branch = false
parallel = false
omit = [
    "aioworkers_sentry/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = false
import_heading_localfolder = true
include_trailing_comma = true

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 100

[tool.hatch.envs.style]
detached = true
features = [
    "dev-lint",
]
[tool.hatch.envs.style.scripts]
check = [
    "ruff check aioworkers_sentry tests",
    "isort --check-only --diff aioworkers_sentry tests",
    "black --check --diff aioworkers_sentry tests",
    "mypy aioworkers_sentry tests",
]
fmt = [
    "isort aioworkers_sentry tests",
    "black aioworkers_sentry tests",
    "check",
]
